@@ -444,37 +444,6 @@ hd_wm_client_activate (MBWindowManager * wm,
 }
 
 
-/* Returns the client that should be the _MB_CURRENT_APP_WINDOW,
- * according to window stacking. */
-MBWindowManagerClient *
-hd_wm_determine_current_app (MBWindowManager *wm)
-{
-  MBWindowManagerClient *c;
-
-  /* Select the topmost client that is either the desktop
-   * or a %HdApp with full screen coverage. */
-  for (c = wm->stack_top; c; c = c->stacked_below)
-    {
-      if (MB_WM_CLIENT_CLIENT_TYPE (c) & MBWMClientTypeDesktop)
-        return c;
-      if (!HD_IS_APP (c))
-        continue;
-      if (!mb_wm_client_is_map_confirmed (c))
-        /* unmapped client cannot be current */
-        continue;
-      if (!hd_comp_mgr_client_is_maximized (c->frame_geometry))
-        /* Not covering the whole application area. */
-        continue;
-      if (!c->window)
-        continue;
-      if (c->window->name && !g_strncasecmp (c->window->name, "systemui", 8))
-        /* systemui is not an application. */
-        continue;
-      return c;
-    }
-  return wm->desktop;
-}
-
 /*
  * If @wm is %NULL return the XID of the foreground %HdApp client
  * in application view.  If we are not in application view this
