@@ -60,7 +60,6 @@ struct HdWmClass
 
 int hd_wm_class_type (void);
 
-MBWindowManagerClient * hd_wm_determine_current_app (MBWindowManager *wm);
 Window                  hd_wm_current_app_is (MBWindowManager *wm,
                                               Window xid);
 Bool                    hd_wm_activate_zoomed_client (MBWindowManager *wm,
